<resources>

    <!-- John -->

    <string name="john_img_desc">This is John\'s photo</string>
    <string name="john_bio">John is a former swim instructor turned coder, he loves eating and thinking about eating.
     He is currently enrolled at Pursuit, a highly competitive programming school with an acceptance rate of 10%.
     He enjoys long walks on the beach and videos of cats and dogs being bros.
    Thanos did nothing wrong, don’t \@ me</string>
    <string name="link_one">Project 1</string>
    <string name="link_two">Project 2</string>
    <string name="link_three">Project 3</string>
    <string name="url_one">https://github.com/garganjohn/Java-Bank.git</string>
    <string name="url_two">https://github.com/garganjohn/Test-Menu.git</string>
    <string name="url_three">https://github.com/garganjohn/TEXT_FILES_PROJECT</string>
    <string name="john_gargan_textname">John Gargan</string>
    <string name="john_email">mailto:johngargan@pursuit.org</string>

    <!--Evelyn's Activity Information-->

    <string name="evelyn_photo_description">Evelyn Photo</string>
    <string name="evelyn_url_one">https://github.com/evelynlucas/Story_App_HW_LUCAS_EVELYN</string>
    <string name="evelyn_url_two">https://github.com/evelynlucas/CYOA_Pursuit_HW_LUCAS_EVELYN</string>
    <string name="evelyn_url_three">https://github.com/evelynlucas/Java_Bank_Pursuit_HW_LUCAS_EVELYN</string>
    <string name="evelyn_menu_one">Mad Libs App</string>
    <string name="evelyn_menu_two">Adventure Game</string>
    <string name="evelyn_menu_three">Bankteller Console</string>
    <string name="evelyn_bio">Evelyn was born and raised in Queens (fyi, the birthplace of the Ramones). Growing up,
        she never once considered a career in the tech industry but all that has changed in the past couple of months.
        Evelyn is so excited to be an Android Fellow at Pursuit, learning new things every day.
        She looks forward to what the future will bring and how she can contribute to the tech industry in meaningful,
    positive and unique way.</string>
    <string name="evelyn_lucas_textname">Evelyn Lucas</string>
    <string name="evelyn_email">mailto:evelynlucas@pursuit.org</string>

    <!--Kelveen's Activity Information-->

    <string name="veen_img_desc">Kelveen\'s Photo</string>
    <string name="veen_url_one">https://github.com/kelveenfabian/Text-Based-Game</string>
    <string name="veen_url_two">https://github.com/kelveenfabian/Story-App</string>
    <string name="veen_url_three">https://github.com/kelveenfabian/Bank_Teller_App</string>
    <string name="veen_menu_one">Text Based Game</string>
    <string name="veen_menu_two">Bank Teller</string>
    <string name="veen_menu_three">Story App</string>
    <string name="kelveen_bio">
         riverrun, past Eve and Adam\'s, from swerve of shore to bend
of bay, brings us by a commodius vicus of recirculation back to
Howth Castle and Environs.
    Sir Tristram, violer d\'amores, fr\'over the short sea, had passen-
core rearrived from North Armorica on this side the scraggy
isthmus of Europe Minor to wielderfight his penisolate war: nor
had topsawyer\'s rocks by the stream Oconee exaggerated themselse
to Laurens County\'s gorgios while they went doublin their mumper
all the time: nor avoice from afire bellowsed mishe mishe to
tauftauf thuartpeatrick: not yet, though venissoon after,</string>
    <string name="veen_email">mailto:kelveenfabian@pursuit.org</string>
    <string name="kelveen_fabian_textname">Kelveen Fabian</string>

    <!--General Activity Information-->

    <string name="app_name">Group Portfolio</string>
    <string name="name_evelyn">Evelyn</string>
    <string name="name_kelveen">Kelveen</string>
    <string name="name_john">John</string>
    <string name="noweb_toast_text">No Browser Available</string>
    <string name="app_goal_text">Welcome! This app will introduce you to three of the most eager
    Android developers at Pursuit. Feel free to check out their \ngithub projects!</string>
    <string name="john_cool_button">Tap Me!</string>
    <string name="title_activity_test_drawer">TestDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="group_photo_description">Group Photo</string>
    <string name="fab_error_message">There are no email clients installed.</string>
    <string name="nav_menu_title">Profiles</string>
    <string name="nav_header_teamName">The Triple Threat</string>
    <string name="welcome_screen">WELCOME SCREEN</string>
    <string name="mini_group_photo_description">Mini group photo</string>



</resources>
